photo gallery year change to 2016

--- a/home.html
+++ b/home.html
@@ -165,7 +165,7 @@
 </div>
 
 <div class="row_dv">
-<h2>Photo Gallery</h2>
+<h2>Photo Gallery 2016</h2>
 
 <div class="row_dv v_gallery">
 <!-- <div class="col-xs-6 col-sm-4 g_item"><img class="img-thumbnail" src="images/v_gallery_1.jpg" alt="Fig-1"></div>
